src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  height: 100%;
}

.nav a {
  color: inherit;
  text-decoration: none;
}

.App {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

.container-films {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.container-scrollable {
  display: flex;
  flex-direction: column;
  overflow-y: auto;
}

.flex-grow-20 {
  flex-grow: 20 !important;
}

